--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.10.2",
     "firebase": "^9.9.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
+    "recoil": "^0.7.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
