--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.10.0",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.10.2",
+    "@stripe/stripe-js": "^1.35.0",
     "firebase": "^9.9.3",
     "next": "latest",
     "react": "18.1.0",
