--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.4.0",
     "react-player": "^2.10.1",
     "recoil": "^0.7.5",
+    "stripe": "^10.7.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
