Finishing the code.

--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@heroicons/react": "^1.0.6",
-    "@mui/material": "^5.10.2",
+    "@mui/material": "^5.10.4",
     "@stripe/stripe-js": "^1.35.0",
     "firebase": "^9.9.3",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "react-player": "^2.10.1",
     "recoil": "^0.7.5",
